--- a/src/_layouts/og.njk
+++ b/src/_layouts/og.njk
@@ -53,7 +53,7 @@
 				text-wrap: balance;
 				text-wrap: pretty;
 
-				background-color: hsl(262deg 89.2% 92.7%);
+				background: hsl(262deg 89.2% 92.7%);
 			}
 
 			h2 a {
@@ -74,7 +74,7 @@
 			@supports (backdrop-filter: blur(2rem)) or (-webkit-backdrop-filter: blur(2rem)) {
 				h1 a {
 					color: white;
-					background-color: transparent;
+					background: transparent;
 					-webkit-backdrop-filter: blur(2rem) brightness(90%) saturate(140%);
 					backdrop-filter: blur(2rem) brightness(90%) saturate(140%);
 					text-shadow: hsla(0 0 100% / 60%) 0 0.2rem 2rem;
