--- a/src/input/css/blocks/breadcrumb.css
+++ b/src/input/css/blocks/breadcrumb.css
@@ -14,7 +14,7 @@ nav[aria-labelledby="breadcrumb"] ol {
 			margin: 0;
 			outline-offset: 0;
 			transition-duration: 145ms;
-			transition-property: color, background-color;
+			transition-property: color, background;
 			transition-timing-function: var(--ease-2);
 
 			&:hover {
@@ -27,7 +27,7 @@ nav[aria-labelledby="breadcrumb"] ol {
 			}
 
 			@media (prefers-reduced-motion: no-preference) {
-				transition-property: color, background-color, outline-offset;
+				transition-property: color, background, outline-offset;
 			}
 
 			&[data-state="active"] {
