--- a/src/input/css/blocks/callout.css
+++ b/src/input/css/blocks/callout.css
@@ -1,5 +1,5 @@
 .callout {
-	background-color: var(--accent-bg-subtle);
+	background: var(--accent-bg-subtle);
 	border: var(--border-size-2) solid var(--accent-border);
 	border-radius: var(--radius-3);
 	padding-block: var(--size-5);
@@ -7,13 +7,13 @@
 	position: relative;
 
 	> .inline-icon {
-		background-color: var(--accent-bg-subtle);
+		background: var(--accent-bg-subtle);
 		border-radius: var(--radius-round);
 		color: var(--accent-border);
-		font-size: 2rem;
-		left: -14px;
+		font-size: var(--font-size-5);
+		inset-block-start: -14px;
+		inset-inline-start: -14px;
 		position: absolute;
-		top: -14px;
 	}
 
 	> strong {
