--- a/src/input/css/blocks/lite-youtube.css
+++ b/src/input/css/blocks/lite-youtube.css
@@ -1,27 +1,13 @@
 lite-youtube {
-	background-color: var(--black);
+	background: var(--black);
 	background-position: center center;
 	background-size: cover;
+	border-radius: var(--radius-2);
 	contain: content;
 	cursor: pointer;
 	display: block;
 	max-width: 720px;
 	position: relative;
-
-	/* gradient */
-	&::before {
-		background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAADGCAYAAAAT+OqFAAAAdklEQVQoz42QQQ7AIAgEF/T/D+kbq/RWAlnQyyazA4aoAB4FsBSA/bFjuF1EOL7VbrIrBuusmrt4ZZORfb6ehbWdnRHEIiITaEUKa5EJqUakRSaEYBJSCY2dEstQY7AuxahwXFrvZmWl2rh4JZ07z9dLtesfNj5q0FU3A5ObbwAAAABJRU5ErkJggg==");
-		background-position: top;
-		background-repeat: repeat-x;
-		content: "";
-		display: block;
-		height: 60px;
-		padding-bottom: 50px;
-		position: absolute;
-		top: 0;
-		transition: all 0.2s cubic-bezier(0, 0, 0.2, 1);
-		width: 100%;
-	}
 
 	/* responsive iframe with a 16:9 aspect ratio
 	 * thanks https://css-tricks.com/responsive-iframes/ */
@@ -42,10 +28,10 @@ lite-youtube {
 
 	/* play button */
 	> .lty-playbtn {
-		background-color: transparent;
+		background: transparent;
 
 		/* YT's actual play button svg */
-		background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 68 48"><path fill="%23f00" fill-opacity="0.8" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path><path d="M 45,24 27,14 27,34" fill="%23fff"></path></svg>');
+		background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewBox="0 0 68 48"><path fill="%23f00" fill-opacity="0.8" d="M66.52,7.74c-0.78-2.93-2.49-5.41-5.42-6.19C55.79,.13,34,0,34,0S12.21,.13,6.9,1.55 C3.97,2.33,2.27,4.81,1.48,7.74C0.06,13.05,0,24,0,24s0.06,10.95,1.48,16.26c0.78,2.93,2.49,5.41,5.42,6.19 C12.21,47.87,34,48,34,48s21.79-0.13,27.1-1.55c2.93-0.78,4.64-3.26,5.42-6.19C67.94,34.95,68,24,68,24S67.94,13.05,66.52,7.74z"></path><path d="M 45,24 27,14 27,34" fill="%23fff"></path></svg>');
 		border: none;
 		cursor: pointer;
 		filter: grayscale(100%);
