--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -19,7 +19,7 @@ eleventyImport:
 				</span>
 			</h1>
 			<div class="[ flex flex-wrap gap-1 ]">
-				<a href="https://en.pronouns.page/@ellyloel" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:pronounspage", { "style": "vertical-align: middle" } %} <span>she/her</span></a>
+				<a href="https://en.pronouns.page/@ellyloel" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:pronounspage", { "style": "vertical-align: middle" } %} <span class="[ p-pronouns ]"><span class="[ p-pronoun h-pronoun ]">she</span>/<span class="[ p-pronoun h-pronoun ]">her</span></span></a>
 				<eight-ball>
 					<span hidden>Design Engineer</span>
 					<span hidden><a href="/blog/front-end-development-s-identity-crisis/">Front-end Developer?</a></span>
@@ -74,82 +74,17 @@ eleventyImport:
 	</header>
 
 	<article class="[ about ][ flow ]">
-		<img class="[ u-photo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' hidden loading="lazy" decoding="async" width="723" height="723">
 		<div class="[ p-note ] [ flow ]">
-			<p>I’m a <a href="/blog/front-end-development-s-identity-crisis/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:UI" %} <span>Web Designer / Design Engineer</span></a> with a passion for <a href="/tags/accessibility/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:universal-access" %} <span>Accessibility</span></a> and <a href="/tags/design-systems/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:cubes" %} <span>Design Systems</span></a>, working to make the <a href="/tags/web/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:browser" %} <span>web</span></a> a more inclusive space in <a href="https://en.wikipedia.org/wiki/Melbourne#:~:text=%3A%20Narrm%20or-,Naarm,-%5B9%5D" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:earth-oceania" %} <span>Naarm</span></a>.</p>
+			<p>I’m a <a href="/blog/front-end-development-s-identity-crisis/" class="[ p-role p-job-title ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:UI" %} <span>Web Designer / Design Engineer</span></a> with a passion for <a href="/tags/accessibility/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:universal-access" %} <span>Accessibility</span></a> and <a href="/tags/design-systems/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:cubes" %} <span>Design Systems</span></a>, working to make the <a href="/tags/web/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:browser" %} <span>web</span></a> a more inclusive space in <a href="https://en.wikipedia.org/wiki/Melbourne#:~:text=%3A%20Narrm%20or-,Naarm,-%5B9%5D" class="[ p-locality ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:earth-oceania" %} <span>Naarm</span></a>.</p>
 			<p>I love crafting with <a href="/tags/web-standards/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:passport" %} <span>Web Standards</span></a> like <a href="/tags/html/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "local:code-rectangle" %} <span>HTML</span></a> & <a href="/tags/css/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fab:css" %} <span>CSS</span></a>, and I’m always looking for ways to queer the web and make things less shit.</p>
-			<p>I'm <a href="/garden/my-disabilities/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:wheelchair-move" %} <span>disabled</span></a> & {% inlineIcon "fas:brain" %} <span>neurodivergent</span> & {% inlineIcon "fas:transgender" %} trans & {% inlineIcon "fas:venus-double" %} queer—this is where my work and identity meet.</p>
+			<p>I'm <a href="/garden/my-disabilities/" class="[ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fas:wheelchair-move" %} <span class="[ p-category ]">disabled</span></a> & {% inlineIcon "fas:brain" %} <span class="[ p-category ]">neurodivergent</span> & {% inlineIcon "fas:transgender" %} <span class="[ p-category ]">trans</span> & {% inlineIcon "fas:venus-double" %} <span class="[ p-category ]">queer</span>—this is where my work and identity meet.</p>
 			<p>When I’m not advocating for better digital experiences, I’m probably geeking out over web standards or figuring out how to make life more equitable for {% inlineIcon "fas:users-between-lines" %} <strong>everyone</strong>.</p>
 			<p>If you want, you can <a href="https://elly.to/ama" rel="me" class="[ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "far:circle-question" %} <span>ask me anything</span></a>.</p>
 			<p class="[ spotify-playing ]">The last song I listened to was <a href="https://www.last.fm/music/Never+Gonna+Give+You+Up/_/Rick+Astley" class="[ song ][ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fab:lastfm" %} "<span>Never Gonna Give You Up</span>"</a> by <em class="[ artist ]">Rick Astley</em>.</p>
-			<div hidden>
-				<li>
-					<details-utils animate>
-						<details class="[ interest-list ]">
-							<summary>I'm a <span class="[ p-role ]">front-end developer/designer and accessibility specialist</span> with a strong interest in and passion for...</summary>
-							<ul role="list" class="[ flow ]">
-								<li>
-									{%- inlineIcon "fas:code" -%}
-									Web Standards
-									<ul role="list" class="[ flow margin-block-start-3 ]">
-										<li>
-											{%- inlineIcon "fab:html5" -%}
-											HTML
-										</li>
-										<li>
-											{%- inlineIcon "fab:css3-alt" -%}
-											CSS
-										</li>
-										<li>
-											{%- inlineIcon "fas:book" -%}
-											WCAG
-										</li>
-										<li>
-											{%- inlineIcon "fas:pen-nib" -%}
-											SVG
-										</li>
-										<li>
-											{%- inlineIcon "fas:diagram-project" -%}
-											ARIA
-										</li>
-										<li>
-											{%- inlineIcon "fas:cube" -%}
-											Web Components
-										</li>
-									</ul>
-								</li>
-								<li>
-									{%- inlineIcon "fas:universal-access" -%}
-									Accessibility
-								</li>
-								<li>
-									{%- inlineIcon "fas:cubes" -%}
-									Design Systems
-								</li>
-								<li>
-									{%- inlineIcon "fas:gears" -%}
-									Design Tokens
-								</li>
-							</ul>
-						</details>
-					</details-utils>
-				</li>
-				<li>
-					{% emoji "🏳️‍⚧️" %} I'm an incredibly <span class="[ p-category ]">queer</span> <span class="[ p-category ]">trans</span> <span class="[ p-gender-identity ]">woman</span>. My pronouns are <a href="https://en.pronouns.page/@ellyloel" class="[ p-pronouns ]"><span class="[ p-pronoun ]">she</span>/<span class="[ p-pronoun ]">her</span></a>.
-				</li>
-				<li>
-					{% emoji "🧠" %} I'm an <span class="[ p-category ]">AuDHD</span> (<span class="[ p-category ]">autistic</span> and <span class="[ p-category ]">ADHD</span>) <span class="[ p-category ]">neurodivergent</span>.
-				</li>
-				<li>
-					{% emoji "🐈‍⬛" %} I have a little rascal of a cat named <a href="/lulu">Lulu</a>, who I love to bits.
-				</li>
-				<li>
-					{% emoji "📺" %} I love all kinds of animation (anime, cartoons, etc.).
-				</li>
-				<li>
-					{% emoji "🌏" %} I live on the edge of Bunurong and Wurundjeri Country, near <span class="[ p-locality ]">Naarm (Melbourne</span>, <span class="[ p-country-name ]">Australia</span>).
-				</li>
-			</div>
+		</div>
+		<div hidden>
+			<img class="[ u-photo u-logo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' loading="lazy" decoding="async" width="723" height="723">
+			<div class="[ p-gender-identity ]">woman</div>
 		</div>
 		<div class="[ flow ]">
 			<h2>Where's Elly?</h2>
