--- a/src/_includes/settings.njk
+++ b/src/_includes/settings.njk
@@ -13,6 +13,10 @@
 			Sounds
 		</button>
 
+		<button type="button" id="text-transform-button" aria-pressed="true">
+			{%- icon "fas:text-height" -%} Lowercase Text
+		</button>
+
 		<fieldset style="border: none;">
 			<legend class="[ h3 line-height-1 margin-block-end-2 ]">Pick a colour scheme</legend>
 			<div class="[ color-scheme-switcher ][ flex flex-wrap gap-3 ]">
