--- a/src/input/css/reset.css
+++ b/src/input/css/reset.css
@@ -170,3 +170,8 @@ a:not([class]) {
 	)[disabled] {
 	cursor: not-allowed;
 }
+
+/* Reset UA text transform styles */
+input, textarea, select, button, ::file-selector-button {
+	text-transform: inherit;
+}
