Updating CSS reset

--- a/src/input/css/reset.css
+++ b/src/input/css/reset.css
@@ -144,8 +144,9 @@ a:not([class]) {
 	outline-offset: 5px;
 }
 
-/* Make sure users can't select button text */
+/* Make sure there's not a tap highlight interactive elements */
 :where(
+		a[href],
 		button,
 		button[type],
 		input[type="button"],
@@ -155,9 +156,6 @@ a:not([class]) {
 :where(input[type="file"])::-webkit-file-upload-button,
 :where(input[type="file"])::file-selector-button {
 	-webkit-tap-highlight-color: transparent;
-	text-align: center;
-	-webkit-touch-callout: none;
-	user-select: none;
 }
 
 /* Disabled cursor for disabled buttons */
