https://deshittify.us/

--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -23,7 +23,7 @@ eleventyImport:
 				<eight-ball>
 					<span hidden>Design Engineer</span>
 					<span hidden><a href="/blog/front-end-development-s-identity-crisis/">Front-end Developer?</a></span>
-					<span hidden>Unshittifier</span>
+					<span hidden>Disenshittifier</span>
 					<span hidden>Luddite</span>
 					<span hidden>Web Designer</span>
 					<span hidden>Accessibility specialist</span>
