--- a/src/input/css/style.css
+++ b/src/input/css/style.css
@@ -63,6 +63,7 @@
 @import url("./blocks/site-head.css") layer(blocks);
 @import url("./blocks/skip-link.css") layer(blocks);
 @import url("./blocks/sound-button.css") layer(blocks);
+@import url("./blocks/tags.css") layer(blocks);
 @import url("./blocks/toc.css") layer(blocks);
 @import url("./blocks/unfurl.css") layer(blocks);
 @import url("./blocks/webmentions.css") layer(blocks);
