--- a/src/_includes/filter-button.njk
+++ b/src/_includes/filter-button.njk
@@ -1,4 +1,4 @@
-<button type="button" id="filters-{{ button.id }}" class="[ badge ]" aria-pressed="false" data-filter-name="{{ button.name }}">
+<button type="button" id="filters-{{ button.id }}" class="[ badge ]" aria-pressed="false" data-filter-name="{{ button.name | lower }}">
 	{{- button.label -}}
 </button>
 
