--- a/src/input/css/style.css
+++ b/src/input/css/style.css
@@ -44,7 +44,7 @@
 @import url("./blocks/feed-block.css") layer(blocks);
 @import url("./blocks/feed.css") layer(blocks);
 @import url("./blocks/footer.css") layer(blocks);
-@import url("./blocks/garden-filters.css") layer(blocks);
+@import url("./blocks/garden.css") layer(blocks);
 @import url("./blocks/graph.css") layer(blocks);
 @import url("./blocks/hero.css") layer(blocks);
 @import url("./blocks/home.css") layer(blocks);
