--- a/src/_layouts/og.njk
+++ b/src/_layouts/og.njk
@@ -105,6 +105,7 @@
 		</style>
 		<link rel="stylesheet" href="/css/fonts.css">
 		{%- rollup "src/input/js/css-doodle.js" | url -%}
+		<meta name="generator" content="{{ eleventy.generator }}">
 	</head>
 	<body>
 		<css-doodle>
