--- a/src/input/content/pages/index.njk
+++ b/src/input/content/pages/index.njk
@@ -64,7 +64,7 @@ eleventyImport:
 						</script>
 					</template>
 					<model-viewer tabindex="0" loading="eager" alt="A 3D modeled Lego Minifigure designed to look like myself." src="/assets/3d/me.glb" camera-controls disable-pan disable-zoom shadow-intensity="0" exposure="0.75" shadow-softness="1" camera-orbit="31.49deg 78.9deg 98.24m" field-of-view="30deg">
-						<img id="poster" src="/assets/img/poster.webp" alt="A 3D modeled Lego Minifigure designed to look like myself." width="600" height="600">
+						<img id="poster" src="/../assets/img/poster.webp" alt="A 3D modeled Lego Minifigure designed to look like myself." width="600" height="600">
 						<div class="progress-bar" slot="progress-bar"></div>
 					</model-viewer>
 				</is-land>
@@ -82,7 +82,7 @@ eleventyImport:
 			<p class="[ spotify-playing ]">The last song I listened to was <a href="https://www.last.fm/music/Never+Gonna+Give+You+Up/_/Rick+Astley" class="[ song ][ u-url ][ link-icon-start text-decoration-none move-link-styling-to-child ]">{% inlineIcon "fab:lastfm" %} "<span>Never Gonna Give You Up</span>"</a> by <em class="[ artist ]">Rick Astley</em>.</p>
 		</div>
 		<div hidden>
-			<img class="[ u-photo u-logo ]" src="/assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' loading="lazy" decoding="async" width="723" height="723">
+			<img class="[ u-photo u-logo ]" src="/../assets/img/pfp.jpg" alt='A digital drawing of me a white woman with blonde hair, smiling and doing a peace sign, wearing a white "golf le fleur" jumper.' loading="lazy" decoding="async" width="723" height="723">
 			<div class="[ p-gender-identity ]">woman</div>
 		</div>
 		<div class="[ flow ]">
