--- a/src/_layouts/post.njk
+++ b/src/_layouts/post.njk
@@ -96,7 +96,7 @@ This post hasn't been updated a long time, so it might be kinda crusty.
 		</div>
 		<details>
 			<summary>Preview image</summary>
-			<img src="https://api.microlink.io/?url=https%3A%2F%2Fwww.ellyloel.com%2Fog{{ page.url }}&screenshot=true&meta=false&embed=screenshot.url" alt="A background of curved purple lines with the text “{{ title }}” ontop, Elly's logo is in the bottom right corner." loading="lazy" width="2560" height="1600">
+			<img eleventy:ignore src="https://api.microlink.io/?url=https%3A%2F%2Fwww.ellyloel.com%2Fog{{ page.url }}&screenshot=true&meta=false&embed=screenshot.url" alt="A background of curved purple lines with the text “{{ title }}” ontop, Elly's logo is in the bottom right corner." loading="lazy" width="2560" height="1600">
 		</details>
 	</div>
 	{# These are flipped because we want next to be newer and prev to be older, the opposite of the collections sorting. #}
