--- a/src/input/css/blocks/markdown-container.css
+++ b/src/input/css/blocks/markdown-container.css
@@ -41,7 +41,7 @@
 				& share-button {
 					display: flex;
 					flex-wrap: wrap;
-					gap: 0.5em;
+					gap: var(--size-2);
 				}
 
 				> div {
