--- a/src/input/root/feeds/feed.atom.njk
+++ b/src/input/root/feeds/feed.atom.njk
@@ -1,41 +1,5 @@
 ---
+layout: atom
 permalink: "feed.atom"
+collection: "postsSortedByDate"
 ---
-<?xml version="1.0" encoding="utf-8"?>
-<feed xmlns="http://www.w3.org/2005/Atom" xml:base="{{ metadata.url }}">
-	<title>{{ metadata.title }}</title>
-	<subtitle>{{ metadata.description }}</subtitle>
-	<link href="{{ '/feed.atom' | absoluteUrl(metadata.url) }}" rel="self"/>
-	<link href="{{ metadata.url }}"/>
-	<updated>{{ collections.postsSortedByDate | getLatestCollectionItemDate | dateToRfc3339 }}</updated>
-	<id>{{ metadata.url }}/</id>
-	<author>
-		<name>{{ metadata.author.name }}</name>
-		<email>{{ metadata.author.email }}</email>
-	</author>
-	{%- for post in collections.postsSortedByDate %}
-		{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
-		<entry>
-			<title>{{ post.data.title }}</title>
-			<link href="{{ absolutePostUrl }}"/>
-			<published>
-				{%- if post.data.created -%}
-					{{ post.data.created | dateObj | dateToRfc3339 }}
-				{%- else -%}
-					{{ post.data.date | dateObj | dateToRfc3339 }}
-				{%- endif -%}
-			</published>
-			<updated>
-				{%- if post.data.modified -%}
-					{{ post.data.modified | dateObj | dateToRfc3339 }}
-				{%- else -%}
-					{{ post.data.date | dateObj | dateToRfc3339 }}
-				{%- endif -%}
-			</updated>
-			<id>{{ absolutePostUrl }}</id>
-			<content xml:lang="{{ metadata.lang }}" type="html">
-				{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) | escape }}
-			</content>
-		</entry>
-	{%- endfor %}
-</feed>
