--- a/src/input/root/feeds/feed.json.njk
+++ b/src/input/root/feeds/feed.json.njk
@@ -1,45 +1,5 @@
 ---
+layout: json
 permalink: "feed.json"
+collection: "postsSortedByDate"
 ---
-{
-	"version": "https://jsonfeed.org/version/1.1",
-	"title": "{{ metadata.title }}",
-	"language": "{{ metadata.lang }}",
-	"home_page_url": "{{ metadata.url }}",
-	"feed_url": "{{ '/feed.json' | absoluteUrl(metadata.url) }}",
-	"description": "{{ metadata.description }}",
-	"author": {
-		"name": "{{ metadata.author.name }}",
-		"url": "{{ metadata.author.url }}"
-	},
-	"items": [
-		{%- for post in collections.postsSortedByDate %}
-		{%- set absolutePostUrl = post.url | absoluteUrl(metadata.url) %}
-		{
-			"id": "{{ absolutePostUrl }}",
-			"url": "{{ absolutePostUrl }}",
-			"title": "{{ post.data.title }}",
-			"content_html": {% if post.templateContent %}{{ post.templateContent | htmlToAbsoluteUrls(absolutePostUrl) | dump | safe }}{% else %}""{% endif %},
-			{%- if post.data.bookmark.link %}
-			"external_url": "{{ post.data.bookmark.link }}",
-			{% endif -%}
-			{%- if post.data.tags or post.data.bookmark.tags -%}
-			"tags": [
-				{% if post.data.bookmark.tags -%}
-					{%- set tags = post.data.tags.concat(post.data.bookmark.tags) -%}
-				{%- else -%}
-					{%- set tags = post.data.tags -%}
-				{%- endif -%}
-				{%- for tag in tags | reject("equalto", "YouTube") | reject("equalto", "Seedling") | reject("equalto", "Budding") | reject("equalto", "Evergreen") | reject("equalto", "Essays") | reject("equalto", "Notes") | reject("equalto", "Microposts") | reject("equalto", "Bookmarks") | reject("equalto", "Projects") | reject("equalto", "Garden") -%}
-					"{{ tag }}"{% if not loop.last %}{{ ",\n" }}{% endif %}
-				{%- endfor %}
-			],
-			{%- endif -%}
-			{%- if post.data.modified %}
-			"date_modified": "{{ post.data.modified | dateObj | dateToRfc3339 }}",
-			{% endif -%}
-			"date_published": "{% if post.data.created %}{{ post.data.created | dateObj | dateToRfc3339 }}{% else %}{{ post.data.date | dateObj | dateToRfc3339 }}{% endif %}"
-		}{% if not loop.last %},{% endif %}
-		{%- endfor %}
-	]
-}
