--- a/src/input/content/pages/og.njk
+++ b/src/input/content/pages/og.njk
@@ -5,6 +5,7 @@ pagination:
   size: 1
   alias: ogPost
 permalink: "og{{ ogPost.data.page.url }}"
+eleventyExcludeFromCollections: true
 ---
 
 <h1>
