Moving newsletter sign up form to feeds page

--- a/src/input/content/pages/feeds.njk
+++ b/src/input/content/pages/feeds.njk
@@ -115,105 +115,4 @@ Also, you should [learn how to setup your own feed(s)](https://www.mnot.net/rss/
 	</table>
 </div>
 
-{# <table>
-		<thead>
-			<tr>
-				<th></th>
-				<th>Digital garden</th>
-				<th>Blog</th>
-				<th>Bookmarks</th>
-				<th>Projects</th>
-				<th>Everything</th>
-			</tr>
-		</thead>
-		<tbody>
-			<tr>
-				<th>
-          RSS
-        </th>
-				<td>
-					<a href="/notes.rss">
-            notes.rss
-          </a>
-				</td>
-				<td>
-					<a href="/articles.rss">
-            articles.rss
-          </a>
-				</td>
-				<td>
-					<a href="/bookmarks.rss">
-            bookmarks.rss
-          </a>
-				</td>
-				<td>
-					<a href="/projects.rss">
-            projects.rss
-          </a>
-				</td>
-				<td>
-					<a href="/feed.rss">
-            feed.rss
-          </a>
-				</td>
-			</tr>
-			<tr>
-				<th>Atom</th>
-				<td>
-					<a href="/notes.atom">
-            notes.atom
-          </a>
-				</td>
-				<td>
-					<a href="/articles.atom">
-            articles.atom
-          </a>
-				</td>
-				<td>
-					<a href="/bookmarks.atom">
-            bookmarks.atom
-          </a>
-				</td>
-				<td>
-					<a href="/projects.atom">
-            projects.atom
-          </a>
-				</td>
-				<td>
-					<a href="/feed.atom">
-            feed.atom
-          </a>
-				</td>
-			</tr>
-			<tr>
-				<th>
-          JSON
-        </th>
-				<td>
-					<a href="/notes.json">
-            notes.json
-          </a>
-				</td>
-				<td>
-					<a href="/articles.json">
-            articles.json
-          </a>
-				</td>
-				<td>
-					<a href="/bookmarks.json">
-            bookmarks.json
-          </a>
-				</td>
-				<td>
-					<a href="/projects.json">
-            projects.json
-          </a>
-				</td>
-				<td>
-					<a href="/feed.json">
-            feed.json
-          </a>
-				</td>
-			</tr>
-		</tbody>
-	</table> #}
+{% include "newsletter.njk" %}
