confetti only on feeds page with newsletter form

--- a/src/_layouts/base-without-header.njk
+++ b/src/_layouts/base-without-header.njk
@@ -32,6 +32,9 @@
 		{%- if page.url !== "/bookmarks/" and page.url | includes("/bookmarks/") -%}
 			{%- rollup "src/input/js/lite-youtube.js" | url -%}
 		{%- endif -%}
+		{%- if page.url === "/feeds/" -%}
+			{%- rollup "src/input/js/confetti.js" | url -%}
+		{%- endif -%}
 		{%- set countPath = "src/input/js/count.js" | url -%}
 		{%- rollup countPath, { "data-goatcounter": "https://ellyloel.goatcounter.com/count" } -%}
 
